fixed typos in sum extension section

--- a/macros.tex
+++ b/macros.tex
@@ -90,7 +90,7 @@
 \newcommand{\fhole}{\mathtt{hole}}
 
 \newcommand{\finj}[1]{\mathtt{inj}~#1}
-\newcommand{\fcase}[2]{\mathtt{case~#1~#2}}
+\newcommand{\fcase}[2]{\mathtt{case}~#1~#2}
 
 % Talk about formal rules in example
 \newcommand{\refrule}[1]{\textrm{Rule~(#1)}}
