progress on sec 2

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,14 @@
+@article{mens2004survey,
+  title={A survey of software refactoring},
+  author={Mens, Tom and Tourw{\'e}, Tom},
+  journal={IEEE Transactions on software engineering},
+  volume={30},
+  number={2},
+  pages={126--139},
+  year={2004},
+  publisher={IEEE}
+}
+
 @book{mthm97-for-dart,
 	Author = {Robin Milner and Mads Tofte and Robert Harper and David MacQueen},
 	Date-Added = {2014-12-02 22:41:48 +0000},
