--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -55,7 +55,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \setlength{\textfloatsep}{12pt}
 
 \usepackage[compact]{titlesec}
-\titlespacing*{\section}{0pt}{3pt}{3pt}
+\titlespacing*{\section}{0pt}{2pt}{0pt}
 \titlespacing*{\subsection}{0pt}{4pt}{3pt}
 \titlespacing*{\subsubsection}{0pt}{4pt}{3pt}
 \titlespacing*{\paragraph}{0pt}{3pt}{5pt}
@@ -84,7 +84,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
  Calculus}
 
 %\authorinfo{\vspace{-2px}}{}{}
-\authorinfo{~}{~}{~}
+\authorinfo{~}{~}{\vspace{-10px}}
 %\authorinfo{Cyrus Omar \and Jonathan Aldrich}
 %         {Carnegie Mellon University}
 %         {\{comar, aldrich\}@cs.cmu.edu}
